--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "private": true,
+  "name": "data-gouv-server",
+  "description": "Map and Incidence Covid 19 - Server",
+  "author": "Adrien Audebert",
+  "license": "MIT",
+  "engines":{
+    "node": "16.4.0",
+    "npm": "7.18.1"
+  },
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js"
