--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Map and Incidence Covid 19 - Server",
   "author": "Adrien Audebert",
   "license": "MIT",
-  "engines":{
+  "engines": {
     "node": "16.4.0",
     "npm": "7.18.1"
   },
@@ -18,7 +18,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.9",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "nodemon": "^2.0.14"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
